--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-
+# conda env create -f environment.yml
 name: erca
 channels:
   - conda-forge
@@ -28,5 +28,5 @@ dependencies:
   - gcsfs # Google Cloud (for intake-esm)
   - zarr # similar to netCDF but more performant (for intake also)
   - cdsapi # usefull to access copernicus data store directly
-  - ipympl # for interactive widget matplotlib
+#  - ipympl # for interactive widget matplotlib -> out of memory in mybinder
 
