--- a/environment.yml
+++ b/environment.yml
@@ -28,5 +28,5 @@ dependencies:
   - gcsfs # Google Cloud (for intake-esm)
   - zarr # similar to netCDF but more performant (for intake also)
   - cdsapi # usefull to access copernicus data store directly
-#  - ipympl # for interactive widget matplotlib -> out of memory in mybinder
+  - ipympl # for interactive widget matplotlib
 
